@@ -2,13 +2,16 @@ local utils = require("__any-planet-start__.utils")
 
 data.raw.technology["planetslib-arig-cargo-drops"].enabled = true
 
+data.raw.technology["electronics"].prerequisites = {"planetaris-sand-sifting"}
+data.raw.technology["steam-power"].prerequisites = {"planetaris-sand-sifting"}
+
 data.raw.technology["steel-processing"].research_trigger = {
         type = "craft-item",
         item = "iron-plate",
         count = 75
       }
 data.raw.technology["steel-processing"].unit = nil
-data.raw.technology["steel-processing"].prerequisites = nil
+data.raw.technology["steel-processing"].prerequisites = {"planetaris-sand-sifting"}
 table.insert(data.raw.technology["steel-processing"].effects,{
           type = "unlock-recipe",
           recipe = "planetaris-small-electric-pole"
@@ -17,6 +20,14 @@ table.insert(data.raw.technology["steel-processing"].effects,{
           type = "unlock-recipe",
           recipe = "barrel"
     })
+
+data.raw.technology["automation-2"].prerequisites = {"automation", "steel-processing"}
+data.raw.technology["automation-2"].unit =
+    {
+      count = 100,
+      ingredients = {{"automation-science-pack", 1}},
+      time = 15
+    }
 
 data.raw.technology["solar-energy"].prerequisites = {"steel-processing", "electronics"}
 data.raw.technology["solar-energy"].research_trigger = {
