@@ -1,3 +1,3 @@
 if not mods["omnia"] then return end
 
-data.raw["planet"]["omnia"].orientation = 0.48     -- original: 0.45
+data.raw["planet"]["omnia"].orientation = 0.5     -- original: 0.45
