@@ -47,6 +47,7 @@ planetaris-sandstone-brick=Sandstone brick
 planetaris-sand-sifting=Sand sifting
 planetaris-advanced-sand-sifting=Advanced sand sifting
 planetaris-advanced-pure-sand-sifting=Advanced pure sand sifting
+planetaris-steam-venting=Steam venting
 planetaris-advanced-heavy-oil-cracking=Advanced heavy oil cracking
 planetaris-compression-rocket-fuel=Compression rocket fuel
 planetaris-heavy-glass=Heavy glass
@@ -119,6 +120,7 @@ planetaris-big-chest=Container
 planetaris-hyper-transport-belt=Logistics 4
 planetaris-automation-4=Automation 4
 planetaris-raw-quartz-productivity=Quartz productivity
+planetaris-heavy-glass-productivity=Heavy glass productivity
 planetaris-arig-roboport=Dust resistant roboport
 planetaris-advanced-solar-panel=Advanced solar panel
 planetaris-supported-solar-panel=Supported solar panel
